fix: overflow issue

--- a/client/app/Components/Home/Comment/Input/index.scss
+++ b/client/app/Components/Home/Comment/Input/index.scss
@@ -25,6 +25,19 @@
     color: inherit;
     overflow-x: hidden;
     overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 3px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: rgba(0, 0, 0, 0.15);
+      border-radius: 3px;
+
+      &:hover {
+        background: rgba(0, 0, 0, 0.5);
+      }
+    }
   }
 
   textarea:focus ~ button {
